@@ -71,6 +71,7 @@ Bugs fixed
 - Bug 1870 - Remove unnecessary AsInt functions
 - Bug 1873 - Energy source checked to be aggregated to the node
 - Bug 1874 - Ipv4L3Protocol::ProcessFragment: addressCombination and idProto identifiers not properly computed
+- Bug 1876 - enable OLSR HNA table access
 - Bug 1882 - int64x64 tests trigger valgrind bug
 - Bug 1883 - IPv6 don't consider the prefix and network when choosing output address
 - Bug 1887 - Point-to-point traces should contain PPP headers
